# recorder

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/abcew/videorecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/FFmpegLibs/include/: config.h  x264_config.h
app/src/main/cpp/FFmpegLibs/include/libavcodec/: mathops.h
app/src/main/cpp/FFmpegLibs/include/libavutil/: common.h
app/src/main/cpp/recoder/: ANativeWindowRenderer.cpp  ANativeWindowRenderer.h  FFMPEGer.cpp  FFMPEGer.h  FFmpegAudioEncoder.cpp  FFmpegAudioEncoder.h  LMRSource.cpp  LMRSource.h  LocalMediaRecorder.cpp  LocalMediaRecorder.h  LocalMediaRecorder2.cpp  MediaRecorder.h  MessageQueue.cpp  MessageQueue.h  MuxEngine.cpp  MuxEngine.h  OpenSLRecorder.cpp  OpenSLRecorder.h  Prefetcher.cpp  Prefetcher.h  cc_fotoplace_video_SinglePlayer.h  com_abcew_videorecoder_ARecorder.cpp  com_abcew_videorecoder_ARecorder.h  ffmpegDecoder.cpp  ffmpegDecoder.h  ffmpegEncoder.cpp  ffmpegEncoder.h
app/src/main/cpp/recoder/utils/: ADebug.h  AString.cpp  AString.h  ColorConverter.cpp  ColorConverter.h  Common.cpp  Common.h  Condition.h  Errors.h  List.h  MediaBuffer.cpp  MediaBuffer.h  MediaBufferGroup.cpp  MediaBufferGroup.h  MetaData.cpp  MetaData.h  Mutex.h  TimedEventQueue.cpp  TimedEventQueue.h
app/src/main/java/com/abcew/videorecoder/: ARecorder.java  AndroidUtils.java  BaseActivity.java  CONSTANTS.java  CameraManager.java  Conf.java  FFmpegPreviewActivity.java  Logger.java  MainActivity.java  ProgressView.java  RecorderActivity.java  RecorderManager.java  RecorderParameters.java  RecorderThread.java  SavedFrames.java  Util.java  VideoPlayTextureView.java  VideoRecorderActivity.java
app/src/main/java/com/abcew/videorecoder/view/: VideoFocusView.java  VideoPreviewView.java  VideoProgressView.java
app/src/main/res/layout/: activity_main.xml  activity_recorder.xml  video_record_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/abcew/videorecoder/: ExampleUnitTest.java
